Initial Panama implementation.